--- a/webtocase.html
+++ b/webtocase.html
@@ -31,13 +31,20 @@
 
 <label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
 
-<label for="phone">Phone</label><input  id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
-
 <label for="subject">Subject</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" /><br>
 
 <label for="description">Description</label><textarea name="description"></textarea><br>
 
-SAP:<textarea  id="00Nd0000007eHPZ" name="00Nd0000007eHPZ" type="text" wrap="soft"></textarea><br>
+<input type="hidden" name="retURL" id="returnUrl" />
+<input type="hidden" id="00N0V0000093kJD" name="00N0V0000093kJD" title="Tipo" value="Produtos Digitais" />
+<input type="hidden" id="00N0V0000093kJC" name="00N0V0000093kJC" title="Subtipo" value="New Wiz.Me" />
+<input type="hidden" id="00N0V0000093lm8" name="00N0V0000093lm8" title="Marca do atendimento" value="Wizard" />
+<label>Tipo de erro</label>
+<select id="00N0V0000093kJ1" name="00N0V0000093kJ1" title="Detalhamento" required>
+  <option value="Erro de Aplicativo">App Error</option>
+  <option value="Erro de Conteúdo">Content Error</option>
+  <option value="Dúvidas">Doubts</option>
+</select>
 
 <input type="hidden"  id="external" name="external" value="1" /><br>
 
