--- a/webtocaseqa.html
+++ b/webtocaseqa.html
@@ -8,6 +8,10 @@
 <!--  ----------------------------------------------------------------------  -->
 
 <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
+<script src="https://www.google.com/recaptcha/api.js"></script>
+<script>
+ function timestamp() { var response = document.getElementById("g-recaptcha-response"); if (response == null || response.value.trim() == "") {var elems = JSON.parse(document.getElementsByName("captcha_settings")[0].value);elems["ts"] = JSON.stringify(new Date().getTime());document.getElementsByName("captcha_settings")[0].value = JSON.stringify(elems); } } setInterval(timestamp, 500); 
+</script>
 </head>
 <body>
 <!--  ----------------------------------------------------------------------  -->
@@ -15,7 +19,7 @@
 <!--  ----------------------------------------------------------------------  -->
 
 <form action="https://pearsonlatam--qalatam.sandbox.my.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
-
+<input type=hidden name='captcha_settings' value='{"keyname":"TesteWalker","fallback":"true","orgId":"00D8J0000004eU3","ts":""}'>
 <input type=hidden name="orgid" value="00D8J0000004eU3">
 <input type=hidden name="retURL" value="http://">
 
@@ -46,7 +50,7 @@
 </select>
 
 <input type="hidden"  id="external" name="external" value="1" /><br>
-
+<div class="g-recaptcha" data-sitekey="6LcABNskAAAAAMOIhhsKPHKWXYBvlsRBpcU4evof"></div><br>
 <input type="submit" name="submit">
 
 </form>
