--- a/chat.html
+++ b/chat.html
@@ -1,8 +1,20 @@
 <html>
   <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
-		background-color: #003057;
-		font-family: "Arial", sans-serif;
+	    position: relative;
+	    border: none;
+	    background: var(--lwc-colorBrand,rgb(0, 0, 8));
+	    text-shadow: none;
+	    box-shadow: none;
+	    border-radius: 4px;
+	    transition: background .4s ease;
+	    color: var(--lwc-colorTextInverse,#FFFFFF);
+	    font-size: var(--lwc-esFontSizeMedium,1em);
+	    font-weight: var(--lwc-fontWeightRegular,400);
+	    font-family: var(--lwc-fontFamily,Open Sans),sans-serif;
+	    width: 100%;
+	    margin: 0;
+	    height: 44px;
 	}
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
 		outline: 1px solid #003057;
