--- a/chat.html
+++ b/chat.html
@@ -21,7 +21,7 @@
 	}
 </style>
 
-<!-- Start of Invitations -->
+<!-- Start of Invitations 
 <div class="embeddedServiceInvitation" id="snapins_invite" inert="true" aria-live="assertive" role="dialog" aria-atomic="true">
 	<div class="embeddedServiceInvitationHeader" aria-labelledby="snapins_titletext" aria-describedby="snapins_bodytext">
 		<img id="embeddedServiceAvatar"></img>
@@ -64,7 +64,7 @@
 		document.addEventListener('keyup', function(event) { if (event.keyCode == 27) { embedded_svc.inviteAPI.inviteButton.rejectInvite(); }})
 	})();
 </script>
-<!-- End of Invitations -->
+End of Invitations -->
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
