--- a/webtocasedevops.html
+++ b/webtocasedevops.html
@@ -15,9 +15,8 @@
 	<!--  ----------------------------------------------------------------------  -->
 	<!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
 	<!--  these lines if you wish to test in debug mode.                          -->
-	<!--  <input type="hidden" name="debug" value=1>                              -->
-	<!--  <input type="hidden" name="debugEmail">                                  -->
-	<!--  value="jose.oliveira1@pearson.com">                                     -->
+	<input type="hidden" name="debug" value=1>                              
+	<input type="hidden" name="debugEmail" value="jose.oliveira1@pearson.com">                                     
 	<!--  ----------------------------------------------------------------------  -->
 
 	<input type="hidden" id="recordtypeid" name="recordtypeid" value="0123o000001lE0pAAE" /><br>
