--- a/webtocasedevops.html
+++ b/webtocasedevops.html
@@ -42,10 +42,10 @@
 	<input type="hidden" id="00N3o000009DeCV" name="00N3o000009DeCV" value="Solicitação" /><br>
 
 	<!-- Valor total a devolver -->
-	<input type="hidden" id="00N3o000009L7OZ" name="00N3o000009L7OZ" value="" /><br>
+	<input type="hidden" id="00N3o000009L7OZ" name="00N3o000009L7OZ" value="0" /><br>
 
 	<!-- Valor total pedido -->
-	<input type="hidden" id="00N3o000009L7Oa" name="00N3o000009L7Oa" value="" /><br>
+	<input type="hidden" id="00N3o000009L7Oa" name="00N3o000009L7Oa" value="0" /><br>
 
 	<input type="hidden" id="external" name="external" value="1" /><br>
 
