--- a/webtocasedevops.html
+++ b/webtocasedevops.html
@@ -14,7 +14,7 @@
 	<!--  ----------------------------------------------------------------------  -->
 	<!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
 	<!--  these lines if you wish to test in debug mode.                          -->
-	<input type="hidden" name="debug" value="1">                              
+	<input type="hidden" name="debug" value=1>                              
 	<input type="hidden" name="debugEmail" value="jose.oliveira1@pearson.com">                                     
 	<!--  ----------------------------------------------------------------------  -->
 
