--- a/webtocasedevops.html
+++ b/webtocasedevops.html
@@ -19,7 +19,7 @@
 	<!--  ----------------------------------------------------------------------  -->
 
 	
-
+        <input type="hidden" id="recordtype" name="recordtype" value="0123o000001lE0p" /><br>
 
 	<label for="name">Contact Name</label><input id="name" maxlength="80" name="name" size="20" type="text" /><br>
 
