--- a/webtocasedevops.html
+++ b/webtocasedevops.html
@@ -6,7 +6,7 @@
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
 <!--  ----------------------------------------------------------------------  -->
 <body>
-<form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
+<form action=https://pearsonlatam--devops.sandbox.lightning.force.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
 
 	<input type="hidden" name="orgid" value="00DEc00000MV4vV">
 	<input type="hidden" name="retURL" value="http://">
@@ -19,7 +19,7 @@
 	<!--  ----------------------------------------------------------------------  -->
 
 	
-        <input type="hidden" id="recordtype" name="recordtype" value="0123o000001lE0p" /><br>
+        <input type="hidden" id="recordType" name="recordType" value="0123o000001lE0p" /><br>
 
 	<label for="name">Contact Name</label><input id="name" maxlength="80" name="name" size="20" type="text" /><br>
 
