--- a/webtocasedevops.html
+++ b/webtocasedevops.html
@@ -6,7 +6,7 @@
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
 <!--  ----------------------------------------------------------------------  -->
 <body>
-<form action="https://pearsonlatam--devops.sandbox.lightning.force.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
+<form action="https://test.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
 
 	<input type="hidden" name="orgid" value="00DEc00000MV4vV">
 	<input type="hidden" name="retURL" value="http://">
@@ -14,8 +14,8 @@
 	<!--  ----------------------------------------------------------------------  -->
 	<!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
 	<!--  these lines if you wish to test in debug mode.                          -->
-	<!-- <input type="hidden" name="debug" value=1>                              -->
-	<!-- <input type="hidden" name="debugEmail" value="jose.oliveira1@pearson.com"> -->                                    
+	<input type="hidden" name="debug" value="1">                              
+	<input type="hidden" name="debugEmail" value="jose.oliveira1@pearson.com">                                     
 	<!--  ----------------------------------------------------------------------  -->
 
 	
