--- a/webtocasedevops.html
+++ b/webtocasedevops.html
@@ -6,9 +6,9 @@
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
 <!--  ----------------------------------------------------------------------  -->
 <body>
-<form action="https://test.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
+<form action="https://pearsonlatam--devops.sandbox.my.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00DEc00000MV4vV" method="POST">
 
-	<input type="hidden" name="orgid" value="00DEc00000MV4vV">
+	<input type=hidden name="orgid" value="00DEc00000MV4vV">
 	<input type="hidden" name="retURL" value="http://">
 
 	<!--  ----------------------------------------------------------------------  -->
