--- a/webtocasedevops.html
+++ b/webtocasedevops.html
@@ -18,11 +18,9 @@
 	<input type="hidden" name="debugEmail" value="jose.oliveira1@pearson.com">                                     
 	<!--  ----------------------------------------------------------------------  -->
 
-	<input type="hidden" id="origin" name="origin" value="Integração E-commerce" /><br>
+	<input type="hidden" id="recordType" name="recordType" value="0123o000001lE0p" /><br>
 	
-        <input type="hidden" id="recordType" name="recordType" value="0123o000001lE0p" /><br>
-
-	<label for="name">Contact Name</label><input id="name" maxlength="80" name="name" size="20" type="text" /><br>
+	<label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
 
 	<label for="subject">Subject</label><input id="subject" maxlength="80" name="subject" size="20" type="text" /><br>
 
