--- a/webtocasedevops.html
+++ b/webtocasedevops.html
@@ -6,16 +6,16 @@
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
 <!--  ----------------------------------------------------------------------  -->
 <body>
-<form action="https://pearsonlatam--devops.sandbox.my.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00DEc00000MV4vV" method="POST">
+<form action="https://pearsonlatam--qalatam.sandbox.my.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00DTH000002BgE6" method="POST">
 
-	<input type=hidden name="orgid" value="00DEc00000MV4vV">
+        <input type=hidden name="orgid" value="00DTH000002BgE6">
 	<input type="hidden" name="retURL" value="http://">
 
 	<!--  ----------------------------------------------------------------------  -->
 	<!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
 	<!--  these lines if you wish to test in debug mode.                          -->
-	<input type="hidden" name="debug" value="1">                              
-	<input type="hidden" name="debugEmail" value="jose.oliveira1@pearson.com">                                     
+	<!-- <input type="hidden" name="debug" value="1">                            -->  
+	<!-- <input type="hidden" name="debugEmail" value="youremail@yourdomain.com"> -->                                      
 	<!--  ----------------------------------------------------------------------  -->
 
 	<input type="hidden" id="recordType" name="recordType" value="0123o000001lE0p" /><br>
