--- a/embeddedserviceenhanced.html
+++ b/embeddedserviceenhanced.html
@@ -1,5 +1,7 @@
 <html>
-
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+</head>
 		<script type='text/javascript'>
 			function initEmbeddedMessaging() {
 				try {
@@ -21,3 +23,4 @@
 		<script type='text/javascript' src='https://pearsonlatam--qalatam.sandbox.my.site.com/ESWChatWizardEnhanced1770630900497/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 	
 </html>
+
